--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,8 @@
 </style>
 
 <body class="bg-white text-black dark:bg-gray-800 dark:text-white transition duration-300">
-    <header class="fixed absolute z-99999999999999999 bg-gradient-to-b from-black via-gray-700 to-transparent md:hidden ">
+    <header
+        class="fixed absolute z-99999999999999999 bg-gradient-to-b from-black via-gray-700 to-transparent md:hidden ">
         <nav class="fixed z-50 md:z-auto bg-gradient-to-b from-black via-gray-800/60 to-transparent md:static flex p-5 md:p-20 justify-between items-center w-full gap-5 "
             data-aos="zoom-y-out">
             <!-- // backdrop-blur-md md:backdrop-blur-none // -->
@@ -57,14 +58,14 @@
         </nav>
 
         <div id="offscreen-nav-container"
-            class="fixed top-0 left-0 w-screen h-svh bg-stone-900 z-10 flex flex-col justify-between -translate-x-full md:hidden duration-300">
+            class="offscreen-nav-container fixed top-0 left-0 w-screen h-svh bg-black z-10 flex flex-col justify-between -translate-x-full md:hidden duration-300">
             <div class="flex flex-col gap-10 p-5">
                 <div class="flex justify-between text-white">
                     <div class=""></div>
                     <div class=""></div>
                 </div>
-                <ul class="flex flex-col gap-5 p-5">
-                    <li href="javascript:void(0)" class="relative group">
+                <ul class="flex flex-col gap-8 p-5 mt-12">
+                    <li href="" class="relative group">
                         <a href="/"
                             class="font-semibold text-stone-300 group-hover:text-stone-200 text-xl duration-300">
                             DASHBOARD
@@ -73,10 +74,10 @@
                             class="absolute -bottom-2 left-0 w-0 duration-500 group-hover:w-full h-1 group-hover:bg-stone-200 bg-stone-100">
                         </div>
                     </li>
-                    <li href="javascript:void(0)" class="relative group">
+                    <li href="" class="relative group">
                         <a href="/view"
                             class="font-semibold text-stone-300 group-hover:text-stone-200 text-xl duration-300">
-                            WEB SAYA 
+                            WEB SAYA
                         </a>
                         <div
                             class="absolute -bottom-2 left-0 w-0 duration-500 group-hover:w-full h-1 group-hover:bg-stone-200 bg-stone-100">
@@ -342,258 +343,6 @@
                 .catch(error => console.error('Error:', error));
         });
     </script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            fetch('/data_month')
-                .then(response => response.json())
-                .then(data => {
-                    const platformCounts = getPlatformCounts(data);
-                    renderChart('monthChart', platformCounts);
-                    updatePlatformList('monthList', platformCounts);
-                })
-                .catch(error => console.error('Error:', error));
-
-            fetch('/data_week')
-                .then(response => response.json())
-                .then(data => {
-                    const platformCounts = getPlatformCounts(data);
-                    renderChart('weeklyChart', platformCounts);
-                    updatePlatformList('weekList', platformCounts);
-                })
-                .catch(error => console.error('Error:', error));
-
-            fetch('/data_today')
-                .then(response => response.json())
-                .then(data => {
-                    const platformCounts = getPlatformCounts(data);
-                    renderChart('dailyChart', platformCounts);
-                    updatePlatformList('dayList', platformCounts);
-                })
-                .catch(error => console.error('Error:', error));
-        });
-
-        function getPlatformCounts(data) {
-            const counts = {
-                instagram: 0,
-                whatsapp: 0,
-                tiktok: 0,
-                youtube: 0,
-                artikel: 0,
-                berita: 0,
-                website: 0
-            };
-            data.forEach(item => {
-                if (counts[item.platform] !== undefined) {
-                    counts[item.platform]++;
-                }
-            });
-            return counts;
-        }
-
-        function renderChart(chartId, platformCounts) {
-            const ctx = document.getElementById(chartId).getContext('2d');
-            new Chart(ctx, {
-                type: 'bar',
-                data: {
-                    labels: ['Instagram', 'WhatsApp', 'TikTok', 'YouTube', 'Artikel', 'Berita', 'Website'],
-                    datasets: [{
-                        data: [
-                            platformCounts.instagram,
-                            platformCounts.whatsapp,
-                            platformCounts.tiktok,
-                            platformCounts.youtube,
-                            platformCounts.artikel,
-                            platformCounts.berita,
-                            platformCounts.website
-                        ],
-                        backgroundColor: [
-                            'rgb(255, 51, 0)',
-                            'rgba(18, 161, 49, 0.9)',
-                            'rgba(34, 40, 34, 1.0)',
-                            'rgba(210, 38, 30, 1.0)',
-                            'rgba(95, 150, 198, 0.9)',
-                            'rgba(85, 86, 47, 0.75)',
-                            'rgba(107, 184, 35, 1.0)'
-                        ],
-                        borderColor: [
-                            'rgb(255, 51, 0)',
-                            'rgba(0, 255, 0, 1)',
-                            'rgba(34, 40, 34, 1.0)',
-                            'rgba(210, 38, 30, 1.0)',
-                            'rgba(95, 150, 198, 0.9)',
-                            'rgba(85, 86, 47, 0.75)',
-                            'rgba(107, 184, 35, 1.0)'
-                        ],
-                        borderWidth: 1
-                    }]
-                },
-                options: {
-                    scales: {
-                        y: {
-                            beginAtZero: true,
-                            ticks: {
-                                color: 'black', // Warna angka (ticks) sumbu Y
-                                font: {
-                                    weight: 'bold'
-                                }
-                            }
-                        },
-                        x: {
-                            ticks: {
-                                color: 'black', // Warna angka (ticks) sumbu X
-                                font: {
-                                    weight: 'bold'
-                                }
-                            }
-                        }
-                    },
-                    plugins: {
-                        legend: {
-                            display: false // Menghilangkan legenda
-                        }
-                    }
-                }
-            });
-        }
-
-        function updatePlatformList(listId, platformCounts) {
-            const list = document.getElementById(listId);
-            list.innerHTML = `
-            <ul>
-                <li>Instagram : ${platformCounts.instagram}</li>
-                <li>WhatsApp : ${platformCounts.whatsapp}</li>
-                <li>TikTok : ${platformCounts.tiktok}</li>
-                <li>YouTube : ${platformCounts.youtube}</li>
-            </ul>
-            <ul>
-                <li>Artikel : ${platformCounts.artikel}</li>
-                <li>Berita : ${platformCounts.berita}</li>
-                <li>Website : ${platformCounts.website}</li>
-            </ul>
-        `;
-        }
-    </script>
-
-    <!-- <script>
-        function createChart(isDarkMode) {
-            var ctx = document.getElementById('barChart').getContext('2d');
-            var backgroundColor = isDarkMode ? 'rgba(255, 255, 255, 0.1)' : 'rgba(0, 0, 0, 0.1)';
-            var borderColor = isDarkMode ? 'rgba(255, 255, 255, 0.2)' : 'rgba(0, 0, 0, 0.2)';
-            var gridColor = isDarkMode ? 'rgba(255, 255, 255, 0.1)' : 'rgba(0, 0, 0, 0.1)';
-            var tickColor = isDarkMode ? 'rgba(255, 255, 255, 0.7)' : 'rgba(0, 0, 0, 0.7)';
-
-            var myChart = new Chart(ctx, {
-                type: 'bar',
-                data: {
-                    labels: ['Instagram', 'Whatsapp', 'Youtube', 'website', 'artikel', 'berita'],
-                    datasets: [{
-                        label: '# of Votes',
-                        data: [10, 15, 7, 9, 22, 7, 3],
-                        backgroundColor: [
-                            'rgb(255, 51, 0)',   
-                            'rgba(0, 255, 0, 1)',    // Hijau
-                            'rgba(204, 0, 0, 1)',   // Merah
-                            'rgb(255, 51, 0)',   
-                            'rgba(0, 255, 0, 1)',    // Hijau
-                            'rgba(204, 0, 0, 1)',   // Merah
-                            'rgba(0, 255, 0, 1)'   // Hijau
-                        ],
-                        borderColor: [
-                            'rgba(255, 165, 0, 1)',  // Oranye
-                            'rgba(0, 255, 0, 1)',    // Hijau
-                            'rgba(204, 0, 0, 1)',   // Merah
-                            'rgb(255, 51, 0)',   
-                            'rgba(0, 255, 0, 1)',    // Hijau
-                            'rgba(204, 0, 0, 1)',   // Merah
-                            'rgba(0, 255, 0, 1)'   // Hijau
-                        ],
-                        borderWidth: 1
-                    }]
-                },
-                options: {
-                    scales: {
-                        x: {
-                            grid: {
-                                color: gridColor,
-                            },
-                            ticks: {
-                                color: tickColor,
-                            }
-                        },
-                        y: {
-                            beginAtZero: true,
-                            grid: {
-                                color: gridColor,
-                            },
-                            ticks: {
-                                color: tickColor,
-                            }
-                        }
-                    },
-                    plugins: {
-                        legend: {
-                            labels: {
-                                color: tickColor
-                            }
-                        }
-                    }
-                }
-            });
-            return myChart;
-        }
-
-        // Function to toggle dark mode
-        function toggleDarkMode() {
-            var isDarkMode = document.documentElement.classList.contains('dark');
-            if (myChart) {
-                myChart.destroy();
-            }
-            myChart = createChart(isDarkMode);
-        }
-
-        var myChart = createChart(document.documentElement.classList.contains('dark'));
-
-        // Listen for dark mode toggle
-        var observer = new MutationObserver(toggleDarkMode);
-        observer.observe(document.documentElement, { attributes: true, attributeFilter: ['class'] });
-    </script> -->
-    <!-- <script>
-        function createChart(isDarkMode) {
-            // Replace this with your actual chart creation code
-            console.log("Chart created with dark mode: " + isDarkMode);
-            return {
-                destroy: function () {
-                    console.log("Chart destroyed");
-                }
-            };
-        }
-
-        function toggleDarkMode() {
-            var isDarkMode = document.documentElement.classList.contains('dark');
-            if (myChart) {
-                myChart.destroy();
-            }
-            myChart = createChart(isDarkMode);
-        }
-
-        var myChart = createChart(document.documentElement.classList.contains('dark'));
-
-        // Listen for dark mode toggle
-        var observer = new MutationObserver(toggleDarkMode);
-        observer.observe(document.documentElement, { attributes: true, attributeFilter: ['class'] });
-
-        // Dark mode toggle
-        const switchMode = document.getElementById('switch-mode');
-        const htmlElement = document.documentElement;
-
-        switchMode.addEventListener('change', () => {
-            if (switchMode.checked) {
-                htmlElement.classList.add('dark');
-            } else {
-                htmlElement.classList.remove('dark');
-            }
-        });
-    </script> -->
 
     <script src="/static/particles.js"></script>
 
@@ -622,10 +371,8 @@
     </script> -->
 
 
-    <script>
+    <!-- <script>
         document.addEventListener("DOMContentLoaded", function () {
-            AOS.init();
-
             const checkbox = document.getElementById("check-mobilenav");
             const navContainer = document.getElementById("offscreen-nav-container");
 
@@ -659,6 +406,18 @@
             checkbox.addEventListener('change', () => {
                 toggleSideNav(checkbox.checked);
             });
+        });
+    </script> -->
+    <script>
+        document.getElementById('check-mobilenav').addEventListener('change', function () {
+            const navContainer = document.getElementById('offscreen-nav-container');
+            if (this.checked) {
+                navContainer.classList.remove('-translate-x-full');
+                navContainer.classList.add('translate-x-0');
+            } else {
+                navContainer.classList.remove('translate-x-0');
+                navContainer.classList.add('-translate-x-full');
+            }
         });
     </script>
 
